# isabelle-zed

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml  release.yml
bridge/: Cargo.toml  README.md  protocol.schema.json
bridge/src/: lib.rs  main.rs  process.rs  protocol.rs  queue.rs
bridge/tests/: mock_adapter.rs  protocol_tests.rs
docs/: official-submission.md  project-structure.md
examples/: zed-keymap-isabelle.json  zed-settings-bridge-mock.json  zed-settings-native.json
isabelle-lsp/: Cargo.toml  README.md
isabelle-lsp/src/: autostart.rs  diagnostics.rs  main.rs  push.rs  transport.rs
scala-adapter/: README.md  build.sbt
scala-adapter/src/main/scala/: AdapterMain.scala  ProtocolModel.scala
scala-adapter/src/test/scala/: AdapterSpec.scala
scripts/: bridge_mock_down.sh  bridge_mock_up.sh  build_isabelle_grammar.sh  build_release.sh  doctor.sh  install_local.sh  install_zed_native.sh  install_zed_native_windows.ps1  install_zed_shortcuts.sh  install_zed_shortcuts_windows.ps1  mock_lsp_e2e.py  mock_send.py  native_lsp_smoke.py  package_release.sh  spawn_e2e_ndjson.py  uninstall_zed_native.sh  uninstall_zed_native_windows.ps1  uninstall_zed_shortcuts.sh  uninstall_zed_shortcuts_windows.ps1  zed_official_check.sh
src/: lib.rs
xtask/: Cargo.toml
xtask/src/: cli.rs  common.rs  main.rs
xtask/src/commands/: build.rs  doctor.rs  mock.rs  mod.rs  zed.rs
zed-extension/: Cargo.toml  LICENSE  README.md  extension.toml
zed-extension/grammars/: isabelle.wasm
zed-extension/languages/isabelle/: config.toml  highlights.scm  tasks.json
zed-extension/src/: lib.rs  session_logic.rs
