[workspace]
members = [
    "bridge",
    "isabelle-lsp",
    "xtask",
    "zed-extension",
]
resolver = "2"

[workspace.dependencies]
anyhow = "=1.0.89"
clap = { version = "=4.5.18", features = ["derive"] }
flate2 = "=1.1.9"
regex = "=1.11.0"
reqwest = { version = "=0.12.8", default-features = false, features = ["blocking", "rustls-tls"] }
serde = { version = "=1.0.210", features = ["derive"] }
serde_json = "=1.0.128"
sha2 = "=0.10.8"
shell-words = "=1.1.0"
tar = "=0.4.42"
tempfile = "=3.12.0"
thiserror = "=1.0.64"
tokio = "=1.40.0"
toml = "=0.8.23"
tower-lsp = "=0.20.0"
tracing = "=0.1.40"
tracing-appender = "=0.2.3"
tracing-subscriber = { version = "=0.3.18", features = ["env-filter"] }
url = "=2.5.2"
zed_extension_api = "0.7.0"

[profile.release]
opt-level = 3
lto = true
