[package]
name = "isabelle-bridge"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "bridge"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
clap = { version = "4.4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
bytes = "1.5"
futures = "0.3"
async-trait = "0.1"
parking_lot = "0.12"
chrono = "0.4"
dirs = "5.0"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"

[lib]
name = "bridge"
path = "src/lib.rs"

[profile.release]
opt-level = 3
lto = true
