[package]
name = "isabelle-bridge"
version = "0.1.0"
edition = "2024"

[lib]
name = "bridge"
path = "src/lib.rs"

[[bin]]
name = "bridge"
path = "src/main.rs"

[dependencies]
clap.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["fs", "io-std", "io-util", "macros", "net", "process", "rt-multi-thread", "signal", "sync", "time"] }
tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
