[package]
name = "isabelle-zed-lsp"
version = "0.1.0"
edition = "2024"
description = "LSP proxy that bridges Zed and Isabelle bridge NDJSON"

[workspace]

[[bin]]
name = "isabelle-zed-lsp"
path = "src/main.rs"

[dependencies]
bridge = { package = "isabelle-bridge", path = "../bridge" }
serde_json = "=1.0.128"
shell-words = "=1.1.0"
thiserror = "=1.0.64"
tokio = { version = "=1.40.0", features = ["io-std", "io-util", "macros", "net", "rt-multi-thread", "sync"] }
tower-lsp = "=0.20.0"
tracing = "=0.1.40"
tracing-subscriber = { version = "=0.3.18", features = ["env-filter"] }

[dev-dependencies]
tempfile = "=3.12.0"
tokio = { version = "=1.40.0", features = ["io-util", "macros", "net", "rt-multi-thread"] }

[profile.release]
opt-level = 3
lto = true
