[package]
name = "isabelle-zed-lsp"
version = "0.1.0"
edition = "2024"
description = "LSP proxy that bridges Zed and Isabelle bridge NDJSON"

[[bin]]
name = "isabelle-zed-lsp"
path = "src/main.rs"

[dependencies]
bridge = { package = "isabelle-bridge", path = "../bridge" }
serde_json.workspace = true
shell-words.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["io-std", "io-util", "macros", "net", "rt-multi-thread", "sync"] }
tower-lsp.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tempfile.workspace = true
