[package]
name = "isabelle-zed-xtask"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "isabelle-zed-xtask"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
flate2.workspace = true
regex.workspace = true
reqwest.workspace = true
serde_json.workspace = true
sha2.workspace = true
tar.workspace = true
toml.workspace = true
