[package]
name = "isabelle-zed"
version = "0.1.0"
edition = "2024"
description = "Isabelle theorem prover support for Zed"
authors = ["Isabelle-Zed Contributors"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
zed = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
tracing = "0.1"
thiserror = "1.0"

[profile.release]
opt-level = 3
lto = true
